// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Select renders with basic props 1`] = `
<Select
  className="the-class"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  placeholder="Select something"
  placeholderValue="placeholder value"
  tabIndex="1"
>
  <div
    className="stx-select stx-select--with-placeholder the-class"
  >
    <select
      className="stx-select__select-element"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      tabIndex="1"
      value="placeholder value"
    >
      <option
        hidden={true}
        value="placeholder value"
      >
        Select something
      </option>
      <option
        value="one"
      >
        One
      </option>
      <option
        value="two"
      >
        Two
      </option>
      <option
        value="three"
      >
        Three
      </option>
    </select>
    <span
      className="stx-select__icon"
    >
      <svg
        className="stx-select-icon__icon"
        viewBox="0 0 24 24"
      >
        <path
          className="stx-select-icon__path"
          d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
          fill="#6B6B6B"
        />
      </svg>
    </span>
  </div>
</Select>
`;

exports[`Select Select renders with disabled 1`] = `
<Select
  className="the-class"
  disabled={true}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  options={
    Array [
      Object {
        "name": "One",
        "value": "one",
      },
      Object {
        "name": "Two",
        "value": "two",
      },
      Object {
        "name": "Three",
        "value": "three",
      },
    ]
  }
  placeholderValue="___PLACEHOLDER___"
  tabIndex="1"
>
  <div
    className="stx-select stx-select--is-disabled the-class"
  >
    <select
      aria-disabled={true}
      className="stx-select__select-element"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      tabIndex="1"
    >
      <option
        key="one"
        value="one"
      >
        One
      </option>
      <option
        key="two"
        value="two"
      >
        Two
      </option>
      <option
        key="three"
        value="three"
      >
        Three
      </option>
    </select>
    <span
      className="stx-select__icon"
    >
      <svg
        className="stx-select-icon__icon"
        viewBox="0 0 24 24"
      >
        <path
          className="stx-select-icon__path"
          d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
          fill="#6B6B6B"
        />
      </svg>
    </span>
  </div>
</Select>
`;

exports[`Select Select renders with loading 1`] = `
<Select
  className="the-class"
  loading={true}
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  options={
    Array [
      Object {
        "name": "One",
        "value": "one",
      },
      Object {
        "name": "Two",
        "value": "two",
      },
      Object {
        "name": "Three",
        "value": "three",
      },
    ]
  }
  placeholderValue="___PLACEHOLDER___"
  tabIndex="1"
>
  <div
    className="stx-select stx-select--is-loading the-class"
  >
    <select
      className="stx-select__select-element"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      tabIndex="1"
    >
      <option
        key="one"
        value="one"
      >
        One
      </option>
      <option
        key="two"
        value="two"
      >
        Two
      </option>
      <option
        key="three"
        value="three"
      >
        Three
      </option>
    </select>
    <span
      className="stx-select__icon"
    >
      <svg
        className="stx-select-icon__icon"
        viewBox="0 0 24 24"
      >
        <path
          className="stx-select-icon__path"
          d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
          fill="#6B6B6B"
        />
      </svg>
    </span>
  </div>
</Select>
`;

exports[`Select Select renders with messageType = alert 1`] = `
<Select
  className="the-class"
  messageType="alert"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  options={
    Array [
      Object {
        "name": "One",
        "value": "one",
      },
      Object {
        "name": "Two",
        "value": "two",
      },
      Object {
        "name": "Three",
        "value": "three",
      },
    ]
  }
  placeholderValue="___PLACEHOLDER___"
  tabIndex="1"
>
  <div
    className="stx-select stx-select--alert the-class"
  >
    <select
      className="stx-select__select-element"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      tabIndex="1"
    >
      <option
        key="one"
        value="one"
      >
        One
      </option>
      <option
        key="two"
        value="two"
      >
        Two
      </option>
      <option
        key="three"
        value="three"
      >
        Three
      </option>
    </select>
    <span
      className="stx-select__icon"
    >
      <svg
        className="stx-select-icon__icon"
        viewBox="0 0 24 24"
      >
        <path
          className="stx-select-icon__path"
          d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
          fill="#6B6B6B"
        />
      </svg>
    </span>
  </div>
</Select>
`;

exports[`Select Select renders with options array 1`] = `
<Select
  className="the-class"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  options={
    Array [
      Object {
        "name": "One",
        "value": "one",
      },
      Object {
        "name": "Two",
        "value": "two",
      },
      Object {
        "name": "Three",
        "value": "three",
      },
    ]
  }
  placeholderValue="___PLACEHOLDER___"
  tabIndex="1"
>
  <div
    className="stx-select the-class"
  >
    <select
      className="stx-select__select-element"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      tabIndex="1"
    >
      <option
        key="one"
        value="one"
      >
        One
      </option>
      <option
        key="two"
        value="two"
      >
        Two
      </option>
      <option
        key="three"
        value="three"
      >
        Three
      </option>
    </select>
    <span
      className="stx-select__icon"
    >
      <svg
        className="stx-select-icon__icon"
        viewBox="0 0 24 24"
      >
        <path
          className="stx-select-icon__path"
          d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
          fill="#6B6B6B"
        />
      </svg>
    </span>
  </div>
</Select>
`;

exports[`Select Select renders with readOnly 1`] = `
<Select
  className="the-class"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  options={
    Array [
      Object {
        "name": "One",
        "value": "one",
      },
      Object {
        "name": "Two",
        "value": "two",
      },
      Object {
        "name": "Three",
        "value": "three",
      },
    ]
  }
  placeholderValue="___PLACEHOLDER___"
  readOnly={true}
  tabIndex="1"
>
  <div
    className="stx-select stx-select--is-read-only the-class"
  >
    <select
      aria-readonly={true}
      className="stx-select__select-element"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={true}
      tabIndex="1"
    >
      <option
        key="one"
        value="one"
      >
        One
      </option>
      <option
        key="two"
        value="two"
      >
        Two
      </option>
      <option
        key="three"
        value="three"
      >
        Three
      </option>
    </select>
    <span
      className="stx-select__icon"
    >
      <svg
        className="stx-select-icon__icon"
        viewBox="0 0 24 24"
      >
        <path
          className="stx-select-icon__path"
          d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
          fill="#6B6B6B"
        />
      </svg>
    </span>
  </div>
</Select>
`;
